header and footer are done

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,255 @@
 body {
-  background-color: #b7b7b7;
+  margin: 0;
+  padding: 0;
+  background-color: #FFFFFF;
+  font-family: Ubuntu, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25.6px;
+}
+
+.container {
+  width: 1230px;
+  margin: 0 auto;
+}
+
+.header {
+  padding: 22px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.header a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 172px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.navbar .navbar__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  gap: 40px;
+}
+.navbar .navbar__list a {
+  text-decoration: none;
+  color: #1E212C;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 25.6px;
+}
+
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 36px;
+}
+.contacts .contacts__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+.contacts .contacts__item p {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 21px;
+}
+.contacts .contacts__item a {
+  text-decoration: none;
+  color: #1E212C;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+}
+
+.opacity__text {
+  opacity: 60%;
+}
+
+.wrapper {
+  padding: 80px 0;
+}
+
+.footer {
+  background-color: #1E212C;
+  color: #FFFFFF;
+}
+
+.footer__box, .logo__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.logo__box {
+  width: 40.081300813%;
+}
+.logo__box p {
+  margin: 0;
+  padding-top: 24px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.social__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 16px;
+}
+
+.footer__box {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.logo__line {
+  gap: 60px;
+}
+
+.subscription__box {
+  width: 40.243902439%;
+}
+.subscription__box .subscription__title {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+}
+.subscription__box .email__field {
+  padding-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.subscription__box .email__field input[type=email] {
+  width: 100%;
+  color: #FFFFFF;
+  opacity: 80%;
+  margin: 0;
+  padding: 13px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  background-color: rgba(255, 255, 255, 0.12);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 4px 0 0 4px;
+}
+.subscription__box .email__field input[type=button] {
+  color: #FFFFFF;
+  margin: 0;
+  padding: 0 16px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 44px;
+  background-color: #FF5A30;
+  border-radius: 0px 4px 4px 0px;
+  border: none;
+}
+.subscription__box .email__field input[type=button]:hover {
+  cursor: pointer;
+}
+.subscription__box p {
+  margin: 0;
+  padding-top: 16px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.footer__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 131px;
+  padding-top: 49px;
+}
+
+.info__box .info__title {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+}
+.info__box .info__list {
+  list-style: none;
+  padding: 0;
+}
+.info__box a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 38px;
+}
+.copyright .copyright__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.copyright .copyright__box span {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.copyright .copyright__up {
+  text-decoration: none;
+  color: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: self-end;
+      -ms-flex-align: self-end;
+          align-items: self-end;
+  gap: 16px;
+}
+.copyright .copyright__up span {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
 }
 /*# sourceMappingURL=style.css.map */
